syntax="proto3";
option java_package ="se.umu.cs.ads.fildil.proto.autogen";
option java_multiple_files = true;
option java_outer_classname = "Protocol";

service Streamer {
    //Request a specific chunk
    rpc requestChunk(ChunkRequest) returns (Chunk){}
    //Return the highest numbered chunk the node has received
    rpc poll(Empty) returns (Chunk){}
    //Force-feed a specific chunk
    rpc receiveChunk(Chunk) returns (ReceiveChunkReply){}
}

message Chunk {
    int32 id = 1;
    bytes buf = 2;
}

message ChunkRequest {
    int32 id = 1;
}

message Empty{}

message ReceiveChunkReply {}

